added atructure for main-cover

--- a/index.html
+++ b/index.html
@@ -44,10 +44,27 @@
         </header>
 
 
-        <main>
+        <main class="page__main">
 
+            <!-- MAIN COVER -->
+            <div class="main__cover">
+                <div class="main__container">
+                    <h1 class="main__title lang" key="cover__title">
+                    </h1>
+                    <h2 class="main__subtitle lang" key="cover__subtitle">
+                    </h2>
+                    <p class="main__text lang" key="cover__text">
+                        
+                    </p>
 
+                </div>
+                <div class="main__buttons">
+                    <a href="http://www.bunkerseguridad.es/en/" class="main__btn btn__primary"><span class="lang"  key="btn__primary"></span></a>
+                    <a href="https://www.youtube.com/channel/UCYBC4bHwGRDrd5XquFztV1A" target="_blank" class="main__btn btn__secondary"><span class="lang"   key="btn__secondary"></span></a>
+                </div>
+            </div>
 
+            <!-- SECTION LABEL -->
             <section class="section__label">
                 <img class="label__logo" src="./assets/img/logo.png" alt="logo">
                 <h2 class="label__title">Bunker Seguridad</h2>
@@ -133,7 +150,7 @@
                         <input class="footer__input" type="email" placeholder="Your Email">
                         <small class="lang" key="footer__accept"></small>
                         <div class="footer__acept">
-                            <label class="checkbox__container"><small>I confirm that I have read and agree to the terms and conditions and </small>
+                            <label class="checkbox__container"><small class="lang" key="footer__checkbox"></small>
                                 <input type="checkbox" checked="checked">
                                 <span class="checkmark"></span>
                               </label>
