--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
             <!-- MAIN COVER -->
             <div class="main__cover">
                 <div class="main__container">
-                    <h1 class="main__title lang" key="cover__title">
+                    <h1 class="main__title lang main__title-animated" key="cover__title">
                     </h1>
-                    <h2 class="main__subtitle lang" key="cover__subtitle">
+                    <h2 class="main__subtitle main__subtitle-animated lang" key="cover__subtitle">
                     </h2>
-                    <p class="main__text lang" key="cover__text">
+                    <p class="main__text main__text-animated lang" key="cover__text">
                         
                     </p>
 
                 </div>
-                <div class="main__buttons">
+                <div class="main__buttons main__buttons-animated">
                     <a href="http://www.bunkerseguridad.es/en/" class="main__btn btn__primary"><span class="lang"  key="btn__primary"></span></a>
                     <a href="https://www.youtube.com/channel/UCYBC4bHwGRDrd5XquFztV1A" target="_blank" class="main__btn btn__secondary"><span class="lang"   key="btn__secondary"></span></a>
                 </div>
@@ -113,10 +113,10 @@
 
             <div class="footer__container">
                 <div class="footer__wrapper">
-                    <div class="footer__block footer__block-logo">
-                        <img class="footer__logo" src="./assets/img/logo.png" alt="logo">
+                    <div class="footer__block footer__block-logo footer__block_1">
+                        <a href="http://www.bunkerseguridad.es/en/" class="btn__primary" ><img class="footer__logo" src="./assets/img/logo.png" alt="logo"></a>
                     </div>
-                    <div class="footer__block">
+                    <div class="footer__block footer__block_2">
                         <h3 class="footer__title">CONTACT US</h3>
                         <ul class="footer__list">
                             <li class="footer__item">C/ Arboleda 18, nave 9, 28031, Madrid – Spain</li>
@@ -125,7 +125,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="footer__block">
+                    <div class="footer__block footer__block_3">
                         <h3 class="footer__title">SOCIAL</h3>
                         <ul class="footer__list">
                             <li class="footer__item">
@@ -145,7 +145,7 @@
                         </ul>
 
                     </div>
-                    <div class="footer__block footer__block-newletter">
+                    <div class="footer__block footer__block-newletter footer__block_4">
                         <h3 class="footer__title">JOIN OUR NEWSLETTER</h3>
                         <input class="footer__input" type="email" placeholder="Your Email">
                         <small class="lang" key="footer__accept"></small>
