added background image

--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
                 <div class="footer__privacy">
                     <small class="footer__copyrate lang" key="footer__copyrate"></small>
                     <div class="footer__privacy-links">
-                        | <a class="footer__privacy-link lang" href="#" key="footer__notice"></a>
-                    | <a class="footer__privacy-link lang" href="#" key="footer__cookies"> </a>
-                    | <a class="footer__privacy-link lang" href="#" key="footer__privacy"></a> |
+                        | <a class="footer__privacy-link lang" target="_blank" href="http://www.bunkerseguridad.es/en/legal-notice/" key="footer__notice"></a>
+                    | <a class="footer__privacy-link lang" target="_blank" href="http://www.bunkerseguridad.es/en/cookies-policy/" key="footer__cookies"> </a>
+                    | <a class="footer__privacy-link lang" target="_blank" href="http://www.bunkerseguridad.es/en/privacy-policy/" key="footer__privacy"></a> |
                     </div>
                     
 
