added canvas effect

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
             <!-- MAIN COVER -->
             <div class="main__cover">
+                <canvas id="canvas"></canvas>
                 <div class="main__container">
                     <h1 class="main__title lang main__title-animated" key="cover__title">
                     </h1>
@@ -186,6 +187,7 @@
     <!-- MY SCRIPT -->
     <script src="./assets/js/language.js"></script>
     <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/canvas.js"></script>
     <script src="./assets/js/slider.js"></script>
     
 
