--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <li id="lang__it" class="header__item">IT</li>
                 <li id="lang__es" class="header__item">ES</li>
             </ul>
+            <h6 class="header__title lang" key="header__language"></h6>
         </header>
 
 
