--- a/index.html
+++ b/index.html
@@ -50,13 +50,11 @@
             <div class="main__cover">
                 <canvas id="canvas"></canvas>
                 <div class="main__container">
+                    <img src="./assets/img/logo/bunker-blanco.png" alt="" class="main__logo">
                     <h1 class="main__title lang main__title-animated" key="cover__title">
                     </h1>
-                    <h2 class="main__subtitle main__subtitle-animated lang" key="cover__subtitle">
-                    </h2>
-                    <p class="main__text main__text-animated lang" key="cover__text">
-                        
-                    </p>
+                    <p class="main__text main__text-animated lang" key="cover__text-1"></p>
+                    <p class="main__text main__text-animated lang" key="cover__text-2"></p>
                     <div class="main__buttons main__buttons-animated">
                         <a href="http://www.bunkerseguridad.es/en/" class="main__btn btn__primary"><span class="lang"  key="btn__primary"></span></a>
                         <a href="https://www.youtube.com/channel/UCYBC4bHwGRDrd5XquFztV1A" target="_blank" class="main__btn btn__secondary"><span class="lang"   key="btn__secondary"></span></a>
@@ -67,7 +65,7 @@
 
             <!-- SECTION LABEL -->
             <section class="section__label">
-                <img class="label__logo" src="./assets/img/logo.png" alt="logo">
+                <img class="label__logo" src="./assets/img/logo/bunker-azul-letras-blancas.png" alt="logo">
                 <h2 class="label__title">Bunker Seguridad</h2>
             </section>
         </main>
@@ -115,7 +113,7 @@
             <div class="footer__container">
                 <div class="footer__wrapper">
                     <div class="footer__block footer__block-logo footer__block_1">
-                        <a href="http://www.bunkerseguridad.es/en/" class="btn__primary" ><img class="footer__logo" src="./assets/img/logo.png" alt="logo"></a>
+                        <a href="http://www.bunkerseguridad.es/en/" ><img class="footer__logo" src="./assets/img/logo/bunker-azul-letras-blancas.png" alt="logo"></a>
                     </div>
                     <div class="footer__block footer__block_2">
                         <h3 class="footer__title">CONTACT US</h3>
