--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="main__cover">
                 <canvas id="canvas"></canvas>
                 <div class="main__container">
-                    <img src="./assets/img/logo/bunker-blanco.png" alt="" class="main__logo">
+                    <img src="./assets/img/logo/bunker-azul-letras-blancas.png" alt="Logo" class="main__logo">
                     <h1 class="main__title lang main__title-animated" key="cover__title">
                     </h1>
                     <p class="main__text main__text-animated lang" key="cover__text-1"></p>
@@ -65,7 +65,7 @@
 
             <!-- SECTION LABEL -->
             <section class="section__label">
-                <img class="label__logo" src="./assets/img/logo/bunker-azul-letras-blancas.png" alt="logo">
+                <img class="label__logo" src="./assets/img/logo/bunker-azul-letras-blancas.png" alt="Logo">
                 <h2 class="label__title">Bunker Seguridad</h2>
             </section>
         </main>
@@ -113,7 +113,7 @@
             <div class="footer__container">
                 <div class="footer__wrapper">
                     <div class="footer__block footer__block-logo footer__block_1">
-                        <a href="http://www.bunkerseguridad.es/en/" ><img class="footer__logo" src="./assets/img/logo/bunker-azul-letras-blancas.png" alt="logo"></a>
+                        <a href="http://www.bunkerseguridad.es/en/" ><img class="footer__logo" src="./assets/img/logo/bunker-azul-letras-blancas.png" alt="Logo"></a>
                     </div>
                     <div class="footer__block footer__block_2">
                         <h3 class="footer__title">CONTACT US</h3>
@@ -149,7 +149,7 @@
                         <input class="footer__input" type="email" placeholder="Your Email">
                         <small class="lang" key="footer__accept"></small>
                         <div class="footer__acept">
-                            <label class="checkbox__container"><small class="lang" key="footer__checkbox"></small>
+                            <label class="checkbox__container"><small class="lang" key="footer__checkbox"></small><a href="http://www.bunkerseguridad.es/en/legal-notice/" class="lang" key="footer__checkbox-link"></a>
                                 <input type="checkbox" checked="checked">
                                 <span class="checkmark"></span>
                               </label>
