--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="main__cover">
                 <canvas id="canvas"></canvas>
                 <div class="main__container">
-                    <img src="./assets/img/logo/bunker-azul-letras-blancas.png" alt="Logo" class="main__logo">
+                    <img src="./assets/img/logo/bunker-azul-letras-blancas-sombra.png" alt="Logo" class="main__logo">
                     <h1 class="main__title lang main__title-animated" key="cover__title">
                     </h1>
                     <p class="main__text main__text-animated lang" key="cover__text-1"></p>
@@ -65,7 +65,7 @@
 
             <!-- SECTION LABEL -->
             <section class="section__label">
-                <img class="label__logo" src="./assets/img/logo/bunker-azul-letras-blancas.png" alt="Logo">
+                <img class="label__logo" src="./assets/img/logo/bunker-azul-letras-blancas-sombra.png" alt="Logo">
                 <h2 class="label__title">Bunker Seguridad</h2>
             </section>
         </main>
@@ -146,17 +146,10 @@
                     </div>
                     <div class="footer__block footer__block-newletter footer__block_4">
                         <h3 class="footer__title">JOIN OUR NEWSLETTER</h3>
-                        <input class="footer__input" type="email" placeholder="Your Email">
-                        <small class="lang" key="footer__accept"></small>
-                        <div class="footer__acept">
-                            <label class="checkbox__container"><small class="lang" key="footer__checkbox"></small><a href="http://www.bunkerseguridad.es/en/legal-notice/" class="lang" key="footer__checkbox-link"></a>
-                                <input type="checkbox" checked="checked">
-                                <span class="checkmark"></span>
-                              </label>
-                            
+                        <div class="footer__acept"> 
                         </div>
 
-                        <a class="footer__btn" href="#">
+                        <a class="footer__btn" href="http://www.bunkerseguridad.es/en/#newsletteren">
                             <div>
                               <span></span>
                            </div>
